--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </div>
     </div>
 
-
+    <h3>Foot</h3>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
@@ -43,6 +43,6 @@
     <script src="index.js"></script>
 
 
-    
+
 </body>
 </html>
